@@ -93,3 +93,4 @@
 20040212 TAG: fuse-utils_0_6_2 (fuse-utils_0_6_2-branch).
 20040223 Merge changes from fuse-utils_0_6_2 to HEAD.
 20040223 TAG: fuse-utils_0_6_2-merge-1
+20040616 acconfig.h,configure.in: remove use of acconfig.h.
